--- a/aboutus.html
+++ b/aboutus.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
-    <title>Ristorante Con Fusion: About Us</title>
+    <title>Food Nation: About Us</title>
 
 </head>
 
@@ -29,7 +29,7 @@
 
             </button>
             <a class="navbar-brand mr-auto" href="./index.html"><img src="img/logo.png" height="30"
-                    Width="41">Ristorante Con Fusion</a>
+                    Width="41">Food Nation</a>
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item "><a class="nav-link" href="./index.html"><span
@@ -50,7 +50,7 @@
         <div class="container">
             <div class="row row-header">
                 <div class="col-12 col-sm-6">
-                    <h1>Ristorante con Fusion</h1>
+                    <h1>Food Nation</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our
                         lipsmacking creations will tickle your culinary senses!</p>
                 </div>
@@ -76,7 +76,7 @@
         <div class="row row-content">
             <div class="col-sm-6">
                 <h2>Our History</h2>
-                <p>Started in 2010, Ristorante con Fusion quickly established itself as a culinary icon par excellence
+                <p>Started in 2010, Food Nation quickly established itself as a culinary icon par excellence
                     in Hong Kong. With its unique brand of world fusion cuisine that can be found nowhere else, it
                     enjoys patronage from the A-list clientele
                     in Hong Kong. Featuring four of the best three-star Michelin chefs in the world, you never know what
@@ -292,17 +292,17 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-auto">
-                    <p>© Copyright 2018 Ristorante Con Fusion</p>
+                    <p>© Copyright 2020 Food Nation</p>
                 </div>
             </div>
         </div>
     </footer>
-    <script src="https://use.fontawesome.com/b2677f8b59.js"></script>
+    
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"
         integrity="sha512-ubuT8Z88WxezgSqf3RLuNi5lmjstiJcyezx34yIU2gAHonIi27Na7atqzUZCOoY4CExaoFumzOsFQ2Ch+I/HCw=="
         crossorigin="anonymous"></script>
-
+        <script src="https://use.fontawesome.com/b2677f8b59.js"></script>
 
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
