--- a/aboutus.html
+++ b/aboutus.html
@@ -28,7 +28,7 @@
                 <span class="navbar-toggler-icon"></span>
 
             </button>
-            <a class="navbar-brand mr-auto" href="./index.html"><img src="img/logo.png" height="30"
+            <a class="navbar-brand mr-auto" href="./index.html"><img src="img/logo1resize.png" height="30"
                     Width="41">Food Nation</a>
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav mr-auto">
@@ -55,7 +55,7 @@
                         lipsmacking creations will tickle your culinary senses!</p>
                 </div>
                 <div class="col-12 col-sm align-self-center">
-                    <img src="img/logo.png" class="img-fluid">
+                    <img src="img/logo1resize.png" class="img-fluid">
                 </div>
             </div>
         </div>
