--- a/aboutus.html
+++ b/aboutus.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
+    <link rel = "icon" href = "./img/logonew.png" type = "image/x-icon"> 
     <title>Food Nation: About Us</title>
 
 </head>
@@ -28,7 +29,7 @@
                 <span class="navbar-toggler-icon"></span>
 
             </button>
-            <a class="navbar-brand mr-auto" href="./index.html"><img src="img/logo1resize.png" height="30"
+            <a class="navbar-brand mr-auto" href="./index.html"><img src="img/logonew.png" height="30"
                     Width="41">Food Nation</a>
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav mr-auto">
@@ -36,7 +37,7 @@
                                 class="fa fa-home fa-lg"></span>Home</a></li>
                     <li class="nav-item active"><a class="nav-link" href="#"><span
                                 class="fa fa-info fa-lg"></span>About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span>Menu</a>
+                    <li class="nav-item"><a class="nav-link" href="./menu.html"><span class="fa fa-list fa-lg"></span>Menu</a>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span
                                 class="fa fa-address-card fa-lg"></span>Contact</a></li>
@@ -55,7 +56,7 @@
                         lipsmacking creations will tickle your culinary senses!</p>
                 </div>
                 <div class="col-12 col-sm align-self-center">
-                    <img src="img/logo1resize.png" class="img-fluid">
+                    <img src="img/logonew.png" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -254,7 +255,7 @@
     <footer class="footer">
         <div class="container">
             <div class="row">
-                <div class="col-12 col-sm-2 col-md-4">
+                <div class="col-6 col-md-4">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
                         <li><a href="#" style="color: rgb(253, 253, 253);">Home</a></li>
@@ -263,7 +264,7 @@
                         <li><a href="./contactus.html" style="color: rgb(253, 253, 253);">Contact</a></li>
                     </ul>
                 </div>
-                <div class="col-12 com-sm-5 col-md-4">
+                <div class="col-6 col-md-4">
                     <h5>Our Address</h5>
                     <address style="color: rgb(253, 253, 253);">
                         121, Clear Water Bay Road<br>
@@ -303,7 +304,7 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="js/scripts.js"></script>
+    
 </body>
 
 </html>
