--- a/contactus.html
+++ b/contactus.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
+    <link rel = "icon" href = "./img/logonew.png" type = "image/x-icon"> 
     <link href="css/styles.css" rel="stylesheet">
 </head>
 
@@ -27,14 +28,14 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="#"><img src="img/logo1resize.png" height="30" Width="41">Food Nation</a>
+            <a class="navbar-brand" href="#"><img src="img/logonew.png" height="30" Width="41">Food Nation</a>
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item"><a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span>
                             Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span
                                 class="fa fa-info fa-lg"></span> About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a>
+                    <li class="nav-item"><a class="nav-link" href="./menu.html"><span class="fa fa-list fa-lg"></span> Menu</a>
                     </li>
                     <li class="nav-item active"><a class="nav-link" href="#"><span
                                 class="fa fa-address-card fa-lg"></span> Contact</a></li>
@@ -52,7 +53,7 @@
                         lipsmacking creations will tickle your culinary senses!</p>
                 </div>
                 <div class="col-12 col-sm align-self-center">
-                    <img src="img/logo1resize.png" class="img-fluid">
+                    <img src="img/logonew.png" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -94,7 +95,7 @@
                 function myMap() {
                 var mapProp= {
                 center:new google.maps.LatLng(28.630599284372966, 77.37024497577957),
-                zoom:17,
+                zoom:16,
                 };
                 var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
                 }
@@ -190,7 +191,7 @@
     <footer class="footer">
         <div class="container">
             <div class="row">
-                <div class="col-12 col-sm-2 col-md-4">
+                <div class="col-6 col-md-4">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
                         <li><a href="#" style="color: rgb(253, 253, 253);">Home</a></li>
@@ -199,7 +200,7 @@
                         <li><a href="./contactus.html" style="color: rgb(253, 253, 253);">Contact</a></li>
                     </ul>
                 </div>
-                <div class="col-12 com-sm-5 col-md-4">
+                <div class="col-6 col-md-4">
                     <h5>Our Address</h5>
                     <address style="color: rgb(253, 253, 253);">
                         121, Clear Water Bay Road<br>
@@ -241,7 +242,7 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="js/scripts.js"></script>
+    
 </body>
 
 </html>
