--- a/menu.html
+++ b/menu.html
@@ -27,14 +27,14 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand mr-auto" href="#"><img src="img/logonew.png" height="30" width="40"></a>
+            <a class="navbar-brand mr-auto" href="#"><img src="img/logonew.png" height="30" width="40">Food Nation</a>
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-home fa-lg"></span>
+                    <li class="nav-item "><a class="nav-link" href="./index.html"><span class="fa fa-home fa-lg"></span>
                             Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span
                                 class="fa fa-info fa-lg"></span> About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./menu.html"><span class="fa fa-list fa-lg"></span> Menu</a>
+                    <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span
                                 class="fa fa-address-card fa-lg"></span> Contact</a></li>
@@ -179,171 +179,174 @@
     </header>
 
     <div class="container">
-        <div class="row row-content">
-            <div class="col">
-                <div id="mycarousel" class="carousel slide" data-ride="carousel">
-                    <ul class="carousel-indicators">
-                        <li data-target="#demo" data-slide-to="0" class="active"></li>
-                        <li data-target="#demo" data-slide-to="1"></li>
-                        <li data-target="#demo" data-slide-to="2"></li>
-                    </ul>
-                    <div class="carousel-inner">
+        <div class="row">
+            <ol class="col-12 breadcrumb">
+                <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                <li class="breadcrumb-item active">Menu</li>
+            </ol>
+            <div class=" col-12 ">
+                <h3>About Us</h3>
+                <hr>
+            </div>
+        </div>
 
-                        <div class="carousel-item active" role="listbox">
-                            <img class="d-block img-fluid" src="img/food2.jpg" alt="alberto">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h2>Uthappizza <span class="badge badge-danger">Hot</span>
-                                    <span class="badge badge-pill badge-secondary">$4.99</span>
-                                </h2>
-                                <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with
-                                    Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and
-                                    Buffalo Paneer.</p>
-                            </div>
-                        </div>
+    </div>
 
-                        <div class="carousel-item">
-                            <img class="d-block img-fluid" src="img/buffet.png" alt="buffet">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">New</span></h2>
-                                <p>Featuring mouthwatering combinations with a choice of five different salads, six
-                                    enticing appetizers, six main entrees and five choicest desserts. Free flowing
-                                    bubbly and soft drinks. All for just $19.99 per person </p>
-                            </div>
-                        </div>
+    <div class="latest-products">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 col-sm-6">
+                    <div class="section-heading col-sm-auto">
+                        <h2>Latest Products</h2>
+                    </div>
+                </div>
 
-                        <div class="carousel-item">
-                            <img class="d-block img-fluid" src="img/chef1.jpg" alt="alberto">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h2 class="mt-0">Alberto Somayya</h2>
-                                <h4>Executive Chef</h4>
-                                <p>Award winning three-star Michelin chef with wide International experience having
-                                    worked closely with whos-who in the culinary world, he specializes in creating
-                                    mouthwatering Indo-Italian fusion experiences. </p>
-                            </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="align-self-center product-item">
+                        <a href="#"><img src="img/food.jpg" alt=""></a>
+                        <div class="down-content">
+                            <a href="#">
+                                <h4>Salad</h4>
+                            </a>
+                            <h6>$20.45</h6>
+
                         </div>
                     </div>
-                    <ol class="carousel-indicators">
-                        <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
-                        <li data-target="#mycarousel" data-slide-to="1"></li>
-                        <li data-target="#mycarousel" data-slide-to="2"></li>
-                    </ol>
-                    <a class="carousel-control-prev" href="#mycarousel" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon"></span>
-                    </a>
-                    <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon"></span>
-                    </a>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="product-item">
+                        <a href="#"><img src="img/food.jpg" alt=""></a>
+                        <div class="down-content">
+                            <a href="#">
+                                <h4>Salad</h4>
+                            </a>
+                            <h6>$15.25</h6>
 
-                    <div class="btn-group" id="carouselButton">
-                        <button class="btn btn-danger btn-sm" id="carousel-pause">
-                            <span class="fa fa-pause"></span>
-                        </button>
-                        <button class="btn btn-danger btn-sm" id="carousel-play">
-                            <span class="fa fa-play"></span>
-                        </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="product-item">
+                        <a href="#"><img src="img/food.jpg" alt=""></a>
+                        <div class="down-content">
+                            <a href="#">
+                                <h4>Salad</h4>
+                            </a>
+                            <h6>$12.50</h6>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="product-item">
+                        <a href="#"><img src="img/food.jpg" alt=""></a>
+                        <div class="down-content">
+                            <a href="#">
+                                <h4>Salad</h4>
+                            </a>
+                            <h6>$22.50</h6>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="align-self-center product-item">
+                        <a href="#"><img src="img/food.jpg" alt=""></a>
+                        <div class="down-content">
+                            <a href="#">
+                                <h4>Salad</h4>
+                            </a>
+                            <h6>$20.45</h6>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="product-item">
+                        <a href="#"><img src="img/food.jpg" alt=""></a>
+                        <div class="down-content">
+                            <a href="#">
+                                <h4>Salad</h4>
+                            </a>
+                            <h6>$15.25</h6>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="product-item">
+                        <a href="#"><img src="img/food.jpg" alt=""></a>
+                        <div class="down-content">
+                            <a href="#">
+                                <h4>Salad</h4>
+                            </a>
+                            <h6>$12.50</h6>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="product-item">
+                        <a href="#"><img src="img/food.jpg" alt=""></a>
+                        <div class="down-content">
+                            <a href="#">
+                                <h4>Salad</h4>
+                            </a>
+                            <h6>$22.50</h6>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="align-self-center product-item">
+                        <a href="#"><img src="img/food.jpg" alt=""></a>
+                        <div class="down-content">
+                            <a href="#">
+                                <h4>Salad</h4>
+                            </a>
+                            <h6>$20.45</h6>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="product-item">
+                        <a href="#"><img src="img/food.jpg" alt=""></a>
+                        <div class="down-content">
+                            <a href="#">
+                                <h4>Salad</h4>
+                            </a>
+                            <h6>$15.25</h6>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="product-item">
+                        <a href="#"><img src="img/food.jpg" alt=""></a>
+                        <div class="down-content">
+                            <a href="#">
+                                <h4>Salad</h4>
+                            </a>
+                            <h6>$12.50</h6>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="product-item">
+                        <a href="#"><img src="img/food.jpg" alt=""></a>
+                        <div class="down-content">
+                            <a href="#">
+                                <h4>Salad</h4>
+                            </a>
+                            <h6>$22.50</h6>
+
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-
-        <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4 order-sm-last col-md-3">
-                <h3>Our Lipsmacking Culinary Creations</h3>
-            </div>
-            <div class="col col-sm order-sm-first col-md">
-                <div class="media">
-                    <img class="d-flex mr-3 img-thumbnail align-self center" src="img/uthappizza.png" alt="uthappizza">
-                    <div class="media-body">
-                        <h2 class="mt-0">Uthappizza <span class="badge badge-danger">Hot</span>
-                            <span class="badge badge-pill badge-secondary">$4.99</span>
-                        </h2>
-                        <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola
-                            olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-
-
-        <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4 col-md-3">
-                <h3>This Month's Promotions</h3>
-            </div>
-            <div class="col col-sm order-sm-last col-md">
-                <div class="media">
-                    <div class="media-body">
-                        <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">New</span></h2>
-                        <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing
-                            appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft
-                            drinks. All for just $19.99 per person </p>
-                    </div>
-                    <img class="d-flex mr-0 img-thumbnail align-self-center" src="img/buffet.png" alt="uthappizza">
-                </div>
-            </div>
-        </div>
-
-        <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4 order-sm-last col-md-3">
-                <h3>Meet our Culinary Specialists</h3>
-            </div>
-            <div class="col col-sm order-sm-first col-md">
-                <div class="media">
-                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/chef1.jpg" alt="alberto">
-                    <div class="media-body">
-                        <h2 class="mt-0">Alberto Somayya</h2>
-                        <h4>Executive Chef</h4>
-                        <p>Award winning three-star Michelin chef with wide International experience having worked
-                            closely with whos-who in the culinary world, he specializes in creating mouthwatering
-                            Indo-Italian fusion experiences. </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-12 col-md-7 offset-md-2">
-                <div class="card">
-                    <h3 class="card-header text-white">Book a table</h3>
-                    <form class="margin-top">
-                        <div class="form-group row">
-                            <div class="col-md-3 offset-md-1">
-                                <label for="noofguests" class="col-form-label">No of Guests:</label>
-                            </div>
-                            <div class="col-md-5">
-                                <label><input type="radio" name="radio1" value="1"> 1</label>
-                                <label><input type="radio" name="radio1" value="2"> 2</label>
-                                <label><input type="radio" name="radio1" value="3"> 3</label>
-                                <label><input type="radio" name="radio1" value="4"> 4</label>
-                                <label><input type="radio" name="radio1" value="5"> 5</label>
-                                <label><input type="radio" name="radio1" value="6"> 6</label>
-                            </div>
-                        </div>
-
-                        <div class="form-group row">
-                            <div class="col-md-3 offset-md-1">
-                                <label for="firstname" class="col-form-label">Date and Time:</label>
-                            </div>
-                            <div class="col-8 col-md-4">
-                                <input type="date" class="form-control" name="date" placeholder="Date">
-                            </div>
-                            <div class="col-4 col-md-3">
-                                <input type="time" class="form-control" name="time" placeholder="Time">
-                            </div>
-                        </div>
-
-                        <div class="form-group row">
-                            <div class="offset-md-4 col-md-10">
-                                <button type="submit" class="btn btn-primary">Reserve</button>
-                            </div>
-
-                        </div>
-
-                    </form>
-                </div>
-            </div>
-        </div>
-
     </div>
 
     <footer class="footer">
