--- a/aboutus.html
+++ b/aboutus.html
@@ -273,7 +273,7 @@
                         <i class="fa fa-phone fa-lg" style="color: rgb(253, 253, 253);"></i> : +852 1234 5678<br>
                         <i class="fa fa-fax fa-lg" style="color: rgb(253, 253, 253);"></i> : +852 8765 4321<br>
                         <i class="fa fa-envelope fa-lg" style="color: rgb(253, 253, 253);"></i> : <a
-                            href="mailto:confusion@food.net" style="color: rgb(253, 253, 253);"">confusion@food.net</a>
+                            href="mailto:confusion@food.net" style="color: rgb(253, 253, 253);">foodnation@food.net</a>
 		           </address>
                 </div>
                 <div class=" col-12 col-sm-4 col-md-4 align-self-center">
