--- a/menu.html
+++ b/menu.html
@@ -185,7 +185,7 @@
                 <li class="breadcrumb-item active">Menu</li>
             </ol>
             <div class=" col-12 ">
-                <h3>About Us</h3>
+                <h3>Menu</h3>
                 <hr>
             </div>
         </div>
@@ -370,7 +370,7 @@
                         <i class="fa fa-phone fa-lg" style="color: rgb(253, 253, 253);"></i> : +852 1234 5678<br>
                         <i class="fa fa-fax fa-lg" style="color: rgb(253, 253, 253);"></i> : +852 8765 4321<br>
                         <i class="fa fa-envelope fa-lg" style="color: rgb(253, 253, 253);"></i> : <a
-                            href="mailto:confusion@food.net" style="color: rgb(253, 253, 253);"">confusion@food.net</a>
+                            href="mailto:confusion@food.net" style="color: rgb(253, 253, 253);">foodnation@food.net</a>
 		           </address>
                 </div>
                 <div class=" col-12 col-md-4 align-self-center">
