--- a/menu.html
+++ b/menu.html
@@ -197,7 +197,7 @@
             <div class="row">
                 <div class="col-md-12 col-sm-6">
                     <div class="section-heading col-sm-auto">
-                        <h2>Latest Products</h2>
+                        <h2>All Dishes</h2>
                     </div>
                 </div>
 
